--- a/relinksys/web/src/app/ecommerce/product/product.component.html
+++ b/relinksys/web/src/app/ecommerce/product/product.component.html
@@ -163,8 +163,8 @@
                                             <mat-form-field class="example-full-width mb-0">
                                                     <mat-label>Gender</mat-label>
                                                     <mat-select name="Gender" [(ngModel)]="item.Gender" required>
-                                                        <mat-option value="Male">Male</mat-option>
-                                                        <mat-option value="Female">Female</mat-option>
+                                                        <mat-option value="Men">Men</mat-option>
+                                                        <mat-option value="Women">Women</mat-option>
                                                         <mat-option value="Kids">Kids</mat-option>
                                                         <mat-option value="Unisex">Unisex</mat-option>
                                                     </mat-select>
