--- a/relinksys/web/src/app/inventory/lens-grid-view/lens-grid-view.component.html
+++ b/relinksys/web/src/app/inventory/lens-grid-view/lens-grid-view.component.html
@@ -1032,7 +1032,7 @@
                 </div>
                 <div class="col-xl-1 col-lg-1 col-md-2 col-sm-6 col-4  mb-0">
                     <mat-form-field class="example-full-width mb-0">
-                        <mat-label>Gst%</mat-label>
+                        <mat-label>Tax%</mat-label>
                         <input matInput name="GSTPercent" [(ngModel)]="lens.GSTPercent" #GSTPercentcontrol
                             [autocomplete]="false">
                         <mat-error>
@@ -1336,7 +1336,7 @@
                 </div>
                 <div class="col-xl-1 col-lg-1 col-md-2 col-sm-6 col-4  mb-0">
                     <mat-form-field class="example-full-width mb-0">
-                        <mat-label>Gst%</mat-label>
+                        <mat-label>Tax%</mat-label>
                         <input matInput name="GSTPercent" [(ngModel)]="lensL.GSTPercent" #GSTPercentcontrol
                             [autocomplete]="false">
                         <mat-error>
@@ -1525,7 +1525,7 @@
                 </div>
                 <div class="col-xl-1 col-lg-1 col-md-2 col-sm-6 col-4  mb-0">
                     <mat-form-field class="example-full-width mb-0">
-                        <mat-label>Gst%</mat-label>
+                        <mat-label>Tax%</mat-label>
                         <input matInput name="GSTPercent" [(ngModel)]="lensS.GSTPercent" #GSTPercentcontrol
                             [autocomplete]="false">
                         <mat-error>
