--- a/relinksys/web/src/app/common/common.component.html
+++ b/relinksys/web/src/app/common/common.component.html
@@ -161,16 +161,17 @@
             </div>
           </div>
           <!-- companyadmin end company payment -->
-          <!-- companyadmin  company payment start -->
-          <!-- <div *ngIf="user?.UserGroup !== 'SuperAdmin'" class="dropdown" (click)="myFunctionS('Ecm')">
-            <a class="dropBtn" data-target="#collapseExampleEcm" >E-commerce <i class="fa fa-caret-down"
-                aria-hidden="true"></i></a>
+
+          <!-- companyadmin  company commerce start -->
+          <div *ngIf="user?.UserGroup !== 'SuperAdmin'" class="dropdown" (click)="myFunctionS('Ecm')">
+            <!-- <a class="dropBtn" data-target="#collapseExampleEcm" >E-commerce <i class="fa fa-caret-down"
+                aria-hidden="true"></i></a> -->
             <div class="drop-content" id="collapseExampleEcm">
               <a  href="javascript:void(0)" [routerLink]="['/ecommerce/product']" id="collapseExampleEcm">Product</a>
-            
             </div>
-          </div> -->
-          <!-- companyadmin end company payment -->
+          </div>
+          <!-- companyadmin end company commerce -->
+
           <!-- companyadmin  report start -->
           <div *ngIf="user?.UserGroup !== 'SuperAdmin'" class="dropdown" (click)="myFunctionS('H')">
             <a class="dropBtn" data-target="#collapseExample7">Report <i class="fa fa-caret-down"
