--- a/relinksys/web/src/app/report/customer-report/customer-report.component.html
+++ b/relinksys/web/src/app/report/customer-report/customer-report.component.html
@@ -235,6 +235,88 @@
                   </div>
                 </div>
               </mat-tab>
+ 
+              <mat-tab label="Customer Performance" ; *ngIf="companyData.PrimeMembership == 'true'">
+                <div class="body">
+                    <div class="row mt-2">
+                      
+                <div class="col-md-1 col-3  order-1 order-md-1 ms-1">
+                  <select class=" form-control"
+                    style="width: auto; border-radius: 22px; font-size: 10px !important; border: 2px solid #c3c3c3; box-shadow: inset 2px 2px 10px #adaaaad4;"
+                    [(ngModel)]="itemsPerPage" (change)="fetchCustomerPerformance();">
+                    <option [ngValue]="10">Show 10 Row</option>
+                    <option [ngValue]="25">Show 25 Row</option>
+                    <option [ngValue]="50">Show 50 Row</option>
+                    <option [ngValue]="100">Show 100 Row</option>
+                    <option [ngValue]="250">Show 250Row</option>
+                    <option [ngValue]="500">Show 500 Row</option>
+                  </select>
+                </div>
+                <div class="col-md-3 d-md-block d-none mx-md-auto order-2 order-md-1" style="margin-top:0px;">
+                  <ngb-pagination style="margin: 0px 0 !important;" [ellipses]="false" ngbPaginationEllipsis
+                    [collectionSize]="collectionSize" #numPages [pageSize]="itemsPerPage" [(page)]="currentPage"
+                    (pageChange)="fetchCustomerPerformance()" [maxSize]="5" [rotate]="true" [ellipses]="false" [boundaryLinks]="true">
+                  </ngb-pagination>
+                </div>
+                <div class="d-md-none d-block col-6 mx-md-auto order-2 order-md-1" style="margin-top:0px;">
+                  <ngb-pagination style="margin: 0px 0 !important;" [ellipses]="false" ngbPaginationEllipsis
+                    [collectionSize]="collectionSize" #numPages [pageSize]="itemsPerPage" [(page)]="currentPage"
+                    (pageChange)="fetchCustomerPerformance()" [maxSize]="2" [rotate]="true" [ellipses]="false" [boundaryLinks]="true">
+                  </ngb-pagination>
+                </div>
+                    </div>
+                 
+
+                  <div class="body p-2">
+                    <div class="row">
+                      <div id="customer-content" class="col-sm-12" style="overflow: auto; height: 450px;">
+                        <table class="table table-striped table-hover table-sm table-bordered"
+                          style="border: 2px solid #fff !important;" id="member">
+                          <thead>
+                            <tr>
+                              <th>SNo. </th>
+                              <th>CustomerName </th>
+                              <th>MobileNo</th>
+                              <th>Email</th>
+                              <th>PhoneNo</th>
+                              <th>BillAmount</th>
+                              <th>PaidAmount</th>
+                              <th>BillDueAmount</th>
+                              <th>ShopName</th>
+                            </tr>
+                            <tr>
+                              <th> <i class="fa fa-file-excel-o excel" title="ExportAsXLSX"
+                                aria-hidden="true" type="button" (click)="exportExPerformance()"> </i></th>
+                              <th></th>
+                              <th></th>
+                              <th></th>
+                              <th></th>
+                              <th></th>
+                              <th></th>
+                              <th></th>
+                              <th></th>
+                            </tr>
+                          </thead>
+                          <tbody class="text-center">
+                            <tr *ngFor="let data of performanceList; let i = index">
+                              <td>{{ i + 1 }} </td>
+                              <td>{{ data.CustomerName }} </td>
+                              <td>{{ data.MobileNo }} {{ data.MobileNo2 }}</td>
+                              <td>{{ data.Email }} </td>
+                              <td>{{ data.PhoneNo }} </td>
+                              <td>{{ data.BillAmount }} </td>
+                              <td>{{ data.PaidAmount }} </td>
+                              <td>{{ data.BillDueAmount }} </td>
+                              <td>{{ data.ShopName }} </td>
+                            </tr>
+                          </tbody>
+                        </table>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </mat-tab>
+
             </mat-tab-group>
           </div>
         </div>
