--- a/relinksys/web/src/app/report/purchase-report/purchase-report.component.html
+++ b/relinksys/web/src/app/report/purchase-report/purchase-report.component.html
@@ -1133,6 +1133,16 @@
                 <div class="body">
                     <form class="p-3 pb-0" #f1="ngForm" (ngSubmit)="getVendorDuePayment()">
                         <div class="row">
+                           <div class="col-xl-2 col-lg-2 col-md-3 col-6 mb-0 ">
+                                                <mat-form-field class="example-full-width mb-0">
+                                                    <mat-label>Filter Types</mat-label>
+                                                    <mat-select name="FilterTypes" [(ngModel)]="data1.FilterTypes">
+                                                        <mat-option value="InvoiceWise">Invoice Wise</mat-option>
+                                                        <mat-option value="AllDue">All Balance</mat-option>
+                                                  
+                                                    </mat-select>
+                                                </mat-form-field>
+                                            </div>
                             <div class="col-xl-2 col-lg-2 col-md-6 col-6 mb-0 ">
                                 <mat-form-field class="example-full-width mb-0 paddingInp">
                                     <mat-label>From</mat-label>
@@ -1211,6 +1221,7 @@
                                     (click)="FromReset1()">
                                     Reset
                                 </button>
+                               
                             </div>
                         </div>
                     </form>
@@ -1218,7 +1229,7 @@
                     <div class="body p-2">
                         <div id="print-content1" class="col-sm-12"
                             style="overflow: auto; height: 450px;">
-                            <table class="table table-striped table-hover table-sm table-bordered"
+                            <table *ngIf="data1.FilterTypes == 'InvoiceWise'" class="table table-striped table-hover table-sm table-bordered"
                                 style="border: 2px solid #fff !important;" id="SupplierDuaExcel">
                                 <thead>
                                     <tr style="white-space: nowrap;">
@@ -1287,6 +1298,52 @@
                                                 (<span style="color: blue;">{{ data.AreaName }}</span>)
                                            </ng-container>
                                         </td>
+                                    </tr>
+                                </tbody>
+                            </table>
+                            <table *ngIf="data1.FilterTypes == 'AllDue'" class="table table-striped table-hover table-sm table-bordered"
+                                style="border: 2px solid #fff !important;" id="SupplierDuaExcel">
+                                <thead>
+                                    <tr style="white-space: nowrap;">
+                                        <th>S.No</th>
+                                        <th>SupplierName</th>
+                                        <th>TotalPurchaseAmount</th>
+                                        <th>TotalPaidAmount</th>
+                                        <th>TotalBalanceAmount</th>
+                                    </tr>
+                                    <tr class="totolRow "
+                                        *ngIf="this.dataList1All != null && this.dataList1All != ''">
+                                        <td>
+                                            <i class="fa fa-file-excel-o excel" title="ExportAsXLSX"
+                                                aria-hidden="true" type="button"
+                                                (click)="exportAsXLSX1()"> </i>
+                                            <button class="bg_none ms-4 me-2" (click)="print1()">
+                                                <i class="far fa-file-pdf "
+                                                    style="color: #1a1e90;font-size: 22px;cursor: pointer;">
+                                                </i>
+                                            </button>
+                                            <div class="button-container">
+                                                <button class="bg_none">
+                                                    <i class="fa-solid fa-filter"
+                                                        style="font-size: 20px; color: #f44336;"></i>
+                                                </button>
+                                            </div>
+                                        </td>
+                                        <td></td>
+                                        <td>{{this.totalAmountDAll}}</td>
+                                        <td>{{this.totalPaidAmountDAll}}</td>
+                                        <td>{{this.totalDueAmountDAll}}</td>
+                                       
+                                    </tr>
+                                </thead>
+                                <tbody class="text-center">
+                                    <tr *ngFor="let data of dataList1All; let i = index" text="left">
+                                        <td>{{ i + 1 }}</td>
+                                        <td>{{data.SupplierName}}</td>
+                                        <td>{{data.totalPurchaseAmount}}</td>
+                                        <td>{{data.totalPaidAmount}} </td>
+                                        <td>{{data.totalBalanceAmount}}</td>
+                                    
                                     </tr>
                                 </tbody>
                             </table>
