--- a/relinksys/web/src/app/report/purchase-report/purchase-report.component.html
+++ b/relinksys/web/src/app/report/purchase-report/purchase-report.component.html
@@ -781,7 +781,7 @@
                             <td *ngIf="columnVisibility2.TAXType"      ></td>
                             <td *ngIf="columnVisibility2.TAX"          ></td>
                             <td *ngIf="columnVisibility2.TAXAmount"     (click)="openModal1(content1)">{{this.ChargetotalGstAmount}}</td>
-                            <td *ngIf="columnVisibility2.GrandTotal"   ></td>
+                            <td *ngIf="columnVisibility2.GrandTotal"   >{{this.ChargetotalTotalAmount}}</td>
                           </tr>
                         </thead>
                         <tbody class="text-center">
