--- a/relinksys/web/src/app/report/purchase-report/purchase-report.component.html
+++ b/relinksys/web/src/app/report/purchase-report/purchase-report.component.html
@@ -1143,7 +1143,7 @@
                                                     </mat-select>
                                                 </mat-form-field>
                                             </div>
-                            <div class="col-xl-2 col-lg-2 col-md-6 col-6 mb-0 ">
+                            <div class="col-xl-2 col-lg-2 col-md-6 col-6 mb-0 " *ngIf="this.data1.FilterTypes == 'InvoiceWise'">
                                 <mat-form-field class="example-full-width mb-0 paddingInp">
                                     <mat-label>From</mat-label>
                                     <input matInput name="FromDate" type="date"
@@ -1151,7 +1151,7 @@
                                         />
                                 </mat-form-field>
                             </div>
-                            <div class="col-xl-2 col-lg-2 col-md-6 col-6 mb-0 ">
+                            <div class="col-xl-2 col-lg-2 col-md-6 col-6 mb-0 " *ngIf="this.data1.FilterTypes == 'InvoiceWise'">
                                 <mat-form-field class="example-full-width mb-0 paddingInp ">
                                     <mat-label>To</mat-label>
                                     <input matInput type="date" name="ToDate" [(ngModel)]="data1.ToDate"
@@ -1187,7 +1187,7 @@
                                 </mat-autocomplete>
                               </mat-form-field> -->
                             </div>
-                            <div class="col-xl-2 col-lg-2 col-md-6 col-12 mb-0">
+                            <div class="col-xl-2 col-lg-2 col-md-6 col-12 mb-0" >
                                 <mat-form-field class="example-full-width mb-0"
                                     *ngIf="user.UserGroup === 'CompanyAdmin'">
                                     <mat-label>Shop Name</mat-label>
