--- a/relinksys/web/src/app/report/reminder-report/reminder-report.component.html
+++ b/relinksys/web/src/app/report/reminder-report/reminder-report.component.html
@@ -127,12 +127,12 @@
                                                        <i  class="fa-brands fa-whatsapp "></i>
                                                    </button>
                                                 </td>
-                                                <td></td>
-                                                <td></td>
-                                                <td></td>
-                                                <td></td>
-                                                <td></td>
-                                                <td></td>
+                                                <td>{{data.CustomerID}}</td>
+                                                <td>{{data.CustomerName}}</td>
+                                                <td>{{data.Mobile}}</td>
+                                                <td>{{data.Date}}</td>
+                                                <td>{{data.ReminderDate}}</td>
+                                                <td>{{data.ShopName}}</td>
                                                 
                                             </tr>
                                         </tbody>
