--- a/relinksys/web/src/app/common/common.component.html
+++ b/relinksys/web/src/app/common/common.component.html
@@ -164,10 +164,11 @@
 
           <!-- companyadmin  company commerce start -->
           <div *ngIf="user?.UserGroup !== 'SuperAdmin'" class="dropdown" (click)="myFunctionS('Ecm')">
-            <!-- <a class="dropBtn" data-target="#collapseExampleEcm" >E-commerce <i class="fa fa-caret-down"
-                aria-hidden="true"></i></a> -->
+            <a class="dropBtn" data-target="#collapseExampleEcm" >E-commerce <i class="fa fa-caret-down"
+                aria-hidden="true"></i></a>
             <div class="drop-content" id="collapseExampleEcm">
               <a  href="javascript:void(0)" [routerLink]="['/ecommerce/product']" id="collapseExampleEcm">Product</a>
+              <a  href="javascript:void(0)" [routerLink]="['/ecommerce/shipment']" id="collapseExampleEcm">Shipment</a>
             </div>
           </div>
           <!-- companyadmin end company commerce -->
